# LeuriLudotheque

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/api/igdb/: err.rs  mod.rs  objet.rs  requete.rs
src/api/openai/: err.rs  mod.rs  objet.rs  requete.rs
src/chemin/: mod.rs
src/chemin/chemins/: err.rs  mod.rs
src/chemin/json/: err.rs  mod.rs
src/donnees/: config.rs  mod.rs  objet.rs
src/donnees/db/igdb/: err.rs  interface.rs  mod.rs
src/donnees/igdb/: err.rs  extra.rs  interface.rs  mod.rs
src/gui/: mod.rs
src/gui/jeu/: mod.rs
src/gui/jeu/miniature/: imp.rs  mod.rs
src/interne/: erreurs.rs  mod.rs
src/outils/: dl.rs  lanceur.rs  mod.rs  scan.rs
src/outils/scan/: err.rs  mod.rs
src/outils/trad/igdb/: err.rs  mod.rs
